Fix: footer on mobile chrome

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,5 +1,9 @@
 .jp-footer {
   height: 50px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background: $primary-color;
 
   &__icon-wrapper {
